[gd_scene load_steps=3 format=3 uid="uid://cigdpuuthf4i"]

[ext_resource type="FontFile" uid="uid://chu0xsvgp2jgb" path="res://assets/Silver.ttf" id="1_m4648"]
[ext_resource type="Script" path="res://scripts/pause.gd" id="2_hekni"]

[node name="Pause" type="Window"]
process_mode = 3
auto_translate_mode = 1
title = "Pause"
initial_position = 2
size = Vector2i(300, 200)
visible = false
popup_window = true
theme_override_constants/title_height = 22
theme_override_fonts/title_font = ExtResource("1_m4648")
theme_override_font_sizes/title_font_size = 32
script = ExtResource("2_hekni")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.5
offset_right = 92.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_m4648")
theme_override_font_sizes/font_size = 40
text = "Continue"
icon_alignment = 1

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_m4648")
theme_override_font_sizes/font_size = 40
text = "Back to Menu"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="go_back_requested" from="." to="." method="_on_go_back_requested"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
